Fix page transitions (#35)
* Fix page transition jumping

* Simplify landing header transformations

* Remove warnings from react

* Remove scrollbar track box-shadow

* Remove unused styles added in branch

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,7 +90,7 @@ body {
   display: grid;
   grid-template-rows: auto fit-content(3rem);
   grid-template-areas: "body" "footer";
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 a {
