--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -54,8 +54,8 @@
   width: 100%;
   height: 200px;
   position: absolute;
-  top: 0;
-  transform: rotateX(90deg) translateZ(54px);
+  bottom: 53px;
+  transform: rotateX(90deg);
   transform-origin: bottom;
   background: var(--dark);
 }
@@ -131,14 +131,6 @@
     padding: 1.5rem;
   }
 
-  .landing-header__bottom {
-    transform: rotateX(90deg) translateZ(75px);
-  }
-
-  /* .carousel__wrapper {
-    margin-top: 10rem;
-  } */
-
   .carousel__wrapper .brand-backdrop {
     left: 2rem;
     max-width: 80vw;
@@ -158,6 +150,7 @@
 
   .landing-header__wrapper {
     margin: 4rem auto;
+    perspective-origin: 50% 130%;
   }
 
   .landing-header {
@@ -171,6 +164,6 @@
   }
 
   .landing-header__bottom {
-    transform: rotateX(90deg) translateZ(91px);
+    bottom: 37px;
   }
 }
